--- a/PortFolioHTML.html
+++ b/PortFolioHTML.html
@@ -26,21 +26,16 @@
         <section class="projects visible">
             <h2>Projects</h2>
             <div class="project">
-                <h3>Project Title 1</h3>
-                <p>Description of project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+                <h3>LogicApp For FINANCE-PROJECT</h3>
+                <p>Description: Developed Logic App for NCFE financial project, that validates the incoming data in Dataverse and post it
+                    to SEPA API, making it available for client. The validation involved PATCH/POST process based on rules.</p>
             </div>
             <div class="project">
-                <h3>Project Title 2</h3>
-                <p>Description of project 2. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
-            </div>
-            <div class="project">
-                <h3>Project Title 3</h3>
-                <p>Description of project 3. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-            </div>
-            <div class="project">
-                <h3>Project Title 4</h3>
-                <p>Description of project 4. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
-            </div>
+                <h3>Regulatory Data Submissions</h3>
+                <p>Description: Created numerous SSRS report using T-SQL. Involved ETL in SSIS in order to keep the data upto date, ingesting 
+                    from API's, Production, LIVE and so on. Created SQL jobs and integrated those SSIS packages to run in certain intervals
+                    This is the core process in the company, as these submission are uploaded to governmene website called OFQUAL.</p>
+           
             <div class="project">
                 <h3>Project Title 5</h3>
                 <p>Description of project 5. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
