--- a/PortFolioHTML.html
+++ b/PortFolioHTML.html
@@ -21,24 +21,31 @@
         </header>
         <section class="about visible">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+            <p>An Advance computer science master’s Graduate and Data Engineer with years of hands-on 
+                experience, proficient in navigating various stages of the data management, BI, Database, ETL /ELT.
+                Including design and implemented BI and data engineering solutions best suited to deliver on our 
+                client needs. Adept in working quickly and efficiently in close collaboration with team and other 
+                functional users and stakeholders. Open to relocation </p>
         </section>
         <section class="projects visible">
             <h2>Projects</h2>
             <div class="project">
-                <h3>LogicApp For FINANCE-PROJECT</h3>
+                <h3>LogicApp For FINANCE-PROJECT- NCFE</h3>
                 <p>Description: Developed Logic App for NCFE financial project, that validates the incoming data in Dataverse and post it
                     to SEPA API, making it available for client. The validation involved PATCH/POST process based on rules.</p>
             </div>
             <div class="project">
-                <h3>Regulatory Data Submissions</h3>
+                <h3>Regulatory Data Submissions- NCFE</h3>
                 <p>Description: Created numerous SSRS report using T-SQL. Involved ETL in SSIS in order to keep the data upto date, ingesting 
                     from API's, Production, LIVE and so on. Created SQL jobs and integrated those SSIS packages to run in certain intervals
                     This is the core process in the company, as these submission are uploaded to governmene website called OFQUAL.</p>
            
             <div class="project">
-                <h3>Project Title 5</h3>
-                <p>Description of project 5. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                <h3>Deep Learning Project- Master's Dissertation</h3>
+                <p>Dissertation Project EMOTION AND MOOD DETECTION ON SONGS Northumbria University: 
+                    Using Convolutional Neural Networks built model to detect emotion of a song based on the 
+                    lyrical data. Also used Naïve bayes for mood classification by considering Thayer’s emotion 
+                    model</p>
             </div>
         </section>
         <footer>
