added description added few more changes for effective look

--- a/PortFolioHTML.html
+++ b/PortFolioHTML.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yashwanth Pammi - Portfolio</title>
     <link rel="stylesheet" href="Bodyportfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,7 @@
                     <p>Data Engineer at NCFE</p>
                 </div>
                 <div class="image">
-                    <img src="file:///C:/Users/44745/Downloads/Picsart_22-03-01_16-01-25-392.jpg" alt="Yashwanth Pammi">
+                    <img src="https://i.postimg.cc/0jfG99Xj/Picsart-22-03-01-16-01-25-392.jpg" alt="Yashwanth Pammi">
                 </div>
             </div>
         </header>
@@ -30,22 +31,37 @@
         <section class="projects visible">
             <h2>Projects</h2>
             <div class="project">
-                <h3>LogicApp For FINANCE-PROJECT- NCFE</h3>
-                <p>Description: Developed Logic App for NCFE financial project, that validates the incoming data in Dataverse and post it
+                <div class="project-icon">
+                    <i class="fas fa-cogs"></i>
+                </div>
+                <div class="project-details">
+                    <h3>LogicApp For FINANCE-PROJECT- NCFE</h3>
+                    <p>Description: Developed Logic App for NCFE financial project, that validates the incoming data in Dataverse and post it
                     to SEPA API, making it available for client. The validation involved PATCH/POST process based on rules.</p>
+                </div>
             </div>
             <div class="project">
-                <h3>Regulatory Data Submissions- NCFE</h3>
-                <p>Description: Created numerous SSRS report using T-SQL. Involved ETL in SSIS in order to keep the data upto date, ingesting 
+                <div class="project-icon">
+                    <i class="fas fa-database"></i>
+                </div>
+                <div class="project-details">
+                    <h3>Regulatory Data Submissions- NCFE</h3>
+                    <p>Description: Created numerous SSRS report using T-SQL. Involved ETL in SSIS in order to keep the data upto date, ingesting 
                     from API's, Production, LIVE and so on. Created SQL jobs and integrated those SSIS packages to run in certain intervals
                     This is the core process in the company, as these submission are uploaded to governmene website called OFQUAL.</p>
-           
+                </div>
+            </div>
             <div class="project">
-                <h3>Deep Learning Project- Master's Dissertation</h3>
-                <p>Dissertation Project EMOTION AND MOOD DETECTION ON SONGS Northumbria University: 
+                <div class="project-icon">
+                    <i class="fas fa-brain"></i>
+                </div>
+                <div class="project-details">
+                    <h3>Deep Learning Project- Master's Dissertation</h3>
+                    <p>Dissertation Project EMOTION AND MOOD DETECTION ON SONGS Northumbria University: 
                     Using Convolutional Neural Networks built model to detect emotion of a song based on the 
                     lyrical data. Also used Naïve bayes for mood classification by considering Thayer’s emotion 
                     model</p>
+                </div>
             </div>
         </section>
         <footer>
