commit new changes for SM

--- a/PortFolioHTML.html
+++ b/PortFolioHTML.html
@@ -15,8 +15,21 @@
                     <h1>Yashwanth Pammi</h1>
                     <p>Data Engineer at NCFE</p>
                 </div>
-                <div class="image">
-                    <img src="https://i.postimg.cc/0jfG99Xj/Picsart-22-03-01-16-01-25-392.jpg" alt="Yashwanth Pammi">
+                <div class="image-links">
+                    <div class="image">
+                        <img src="https://i.postimg.cc/0jfG99Xj/Picsart-22-03-01-16-01-25-392.jpg" alt="Yashwanth Pammi">
+                    </div>
+                    <div class="links">
+                        <a href="www.linkedin.com/in/yashp90890" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="yashp90890@gmail.com" target="_blank">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                        <a href="https://www.fiverr.com/yashrajpyt?public_mode=true" target="_blank">
+                            <i class="fas fa-briefcase"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
