--- a/PortFolioHTML.html
+++ b/PortFolioHTML.html
@@ -20,10 +20,10 @@
                         <img src="https://i.postimg.cc/0jfG99Xj/Picsart-22-03-01-16-01-25-392.jpg" alt="Yashwanth Pammi">
                     </div>
                     <div class="links">
-                        <a href="www.linkedin.com/in/yashp90890" target="_blank">
+                        <a href="https://www.linkedin.com/in/yashp90890/" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="yashp90890@gmail.com" target="_blank">
+                        <a href="mailto:yashp90890@gmail.com" target="_blank">
                             <i class="fas fa-envelope"></i>
                         </a>
                         <a href="https://www.fiverr.com/yashrajpyt?public_mode=true" target="_blank">
