changes to name

--- a/PortFolioHTML.html
+++ b/PortFolioHTML.html
@@ -12,7 +12,7 @@
         <header>
             <div class="header-content">
                 <div class="text">
-                    <h1>Yashwanth Pammi</h1>
+                    <h1 class="animated-text">Yashwanth Pammi</h1>
                     <p>Data Engineer at NCFE</p>
                 </div>
                 <div class="image-links">
@@ -61,7 +61,7 @@
                     <h3>Regulatory Data Submissions- NCFE</h3>
                     <p>Description: Created numerous SSRS report using T-SQL. Involved ETL in SSIS in order to keep the data upto date, ingesting 
                     from API's, Production, LIVE and so on. Created SQL jobs and integrated those SSIS packages to run in certain intervals
-                    This is the core process in the company, as these submission are uploaded to governmene website called OFQUAL.</p>
+                    This is the core process in the company, as these submission are uploaded to government website called OFQUAL.</p>
                 </div>
             </div>
             <div class="project">
